# Sovik

./: .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json
.gigaide/: gigaide.properties
apps/backend/: Dockerfile  pyproject.toml
apps/backend/src/: __init__.py  main.py
apps/backend/src/agents/: __init__.py  base.py  code_generator.py  code_reviewer.py  component_designer.py  prompts.py  requirements_analyzer.py  schemas.py  workflow.py
apps/backend/src/api/: __init__.py
apps/backend/src/api/routers/: __init__.py  ai.py
apps/backend/src/core/: __init__.py  config.py
apps/backend/src/services/: __init__.py  ollama_service.py
apps/backend/tests/: test_agents.py  test_component_designer.py  test_ollama_service.py
apps/frontend/: .gitignore  Dockerfile  README.md  next-env.d.ts  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
apps/frontend/.gigaide/: gigaide.properties
apps/frontend/src/app/: layout.tsx  page.tsx
apps/frontend/src/app/api/chat/: route.ts
apps/frontend/src/components/ai/: ChatInput.tsx  ChatInterface.tsx  ChatMessage.tsx
apps/frontend/src/components/ui/: Badge.tsx  Button.tsx
apps/frontend/src/types/: index.ts
